[gd_scene load_steps=12 format=2]

[ext_resource path="res://World.gd" type="Script" id=1]
[ext_resource path="res://Assets/ground.png" type="Texture" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Camera2D.gd" type="Script" id=4]
[ext_resource path="res://PlatformSpawner.tscn" type="PackedScene" id=5]
[ext_resource path="res://backgroundCloudSpawner.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/hills1.png" type="Texture" id=7]
[ext_resource path="res://Assets/ShortStack-Regular.ttf" type="DynamicFontData" id=8]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 527.372, 31.6245 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 572.349, 20.2343 )

[sub_resource type="DynamicFont" id=3]

size = 24
use_mipmaps = true
use_filter = true
font_data = ExtResource( 8 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Main" type="Node2D"]

script = ExtResource( 1 )

[node name="ground" type="Sprite" parent="." index="0"]

position = Vector2( 528.921, 570.167 )
scale = Vector2( 1.03448, 0.603333 )
texture = ExtResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="." index="1"]

position = Vector2( 519.918, 530.007 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D" index="0"]

position = Vector2( 4.10107, -9.62363 )
scale = Vector2( 1, 1 )
shape = SubResource( 1 )

[node name="Player" parent="." index="2" instance=ExtResource( 3 )]

position = Vector2( 511.076, 429.237 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="Camera2D" type="Camera2D" parent="." index="3"]

anchor_mode = 0
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = false
drag_margin_v_enabled = false
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 1.0
drag_margin_top = 1.0
drag_margin_right = 1.0
drag_margin_bottom = 1.0
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
script = ExtResource( 4 )
_sections_unfolded = [ "Limit", "Smoothing", "Transform" ]

[node name="Area2D" type="Area2D" parent="Camera2D" index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/Area2D" index="0"]

position = Vector2( 526.99, 618.123 )
shape = SubResource( 2 )

[node name="PlatformSpawner" parent="." index="4" instance=ExtResource( 5 )]

_sections_unfolded = [ "Transform" ]

[node name="GameOverSinkIn" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = false

[node name="ParallaxBackground" type="ParallaxBackground" parent="." index="6"]

layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
scroll_offset = Vector2( 0, 0 )
scroll_base_offset = Vector2( 0, 0 )
scroll_base_scale = Vector2( 1, 1 )
scroll_limit_begin = Vector2( 0, 0 )
scroll_limit_end = Vector2( 0, 0 )
scroll_ignore_camera_zoom = false
_sections_unfolded = [ "Scroll" ]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground" index="0"]

motion_scale = Vector2( 1, 0.5 )
motion_offset = Vector2( 0, 0 )
motion_mirroring = Vector2( 0, 0 )
_sections_unfolded = [ "Motion" ]

[node name="backgroundCloudSpawner" parent="ParallaxBackground/ParallaxLayer" index="0" instance=ExtResource( 6 )]

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground" index="1"]

position = Vector2( 545.482, 414.643 )
scale = Vector2( 1.11059, 1.11059 )
motion_scale = Vector2( 1, 0.1 )
motion_offset = Vector2( 0, 0 )
motion_mirroring = Vector2( 0, 0 )
_sections_unfolded = [ "Motion" ]

[node name="hills1" type="Sprite" parent="ParallaxBackground/ParallaxLayer2" index="0"]

position = Vector2( -25.1735, 86.4904 )
scale = Vector2( 1, 1 )
texture = ExtResource( 7 )

[node name="Score" type="Label" parent="ParallaxBackground" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 2.0
margin_right = 228.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.140762, 0.809705, 0.878906, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_constants/shadow_offset_x = 2
text = "Score: 0"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="fallen" from="Player" to="." method="_on_Player_fallen"]

[connection signal="body_entered" from="Camera2D/Area2D" to="Player" method="_on_Area2D_body_entered"]

[connection signal="timeout" from="GameOverSinkIn" to="." method="_on_GameOverSinkIn_timeout"]


